hphp/hack/test/typecheck/defined/assign_in_eif.php
<?hh // strict

function f(bool $b): int {
  ($b ? $x = 1 : $x = 0);
  return $x;
}
